# LSDAMM

./: .gitignore  LICENSE  LSDAMM-FULL-Scaffold-and-Build.md  PRODUCTION_READY.md  README.md  lackadaisical_spectral_distributed_ai_mesh_spec_reference_guide.md  setup.bat
.github/workflows/: ci.yml
chatbot/: package.json  server.js
chatbot/public/: index.html
chatbot/public/css/: styles.css
chatbot/public/js/: app.js
docs/: API.md  DEPLOYMENT.md  WINDOWS_SETUP.md
electron/: package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  preload.ts
electron/src/services/: mesh_client.ts
native/: CMakeLists.txt  Makefile
native/installer/: Product.wxs
native/installer/assets/: license.rtf  resource.rc.in
native/installer/config/: lsdamm.example.toml
native/src/core/: main.c
native/src/gui/: main_win.c  main_win.h
native/src/mesh/: node_coordinator.c  node_coordinator.h  node_manager.c  node_manager.h  swim_gossip.c  swim_gossip.h
native/src/network/: websocket.c  websocket.h
native/src/util/: config.c  config.h  logging.c  logging.h
native/tests/: test_swim.c
server/: eslint.config.js  package-lock.json  package.json  tsconfig.json
server/config/: .env.example  server.example.toml
server/docker/: Dockerfile  docker-compose.yml
server/nginx/: lsdamm.conf
server/scripts/: create_admin_user.sh  setup_database.sh
server/src/: main.ts
server/src/api/: attachment_endpoints.ts  health.ts  key_endpoints.ts  mesh_endpoints.ts  router.ts  user_endpoints.ts  vision_endpoints.ts
server/src/auth/: api_keys.ts  jwt.ts  password_hash.ts  user_auth.ts
server/src/db/: database.ts
server/src/db/migrations/: 001_initial.sql  002_api_keys.sql  003_providers.sql  004_memories.sql
server/src/mesh/: message_router.ts  session_manager.ts  websocket_server.ts
server/src/models/: anthropic_service.ts  google_service.ts  ollama_service.ts  openai_service.ts  router.ts  xai_service.ts
server/src/services/: memory_service.ts
server/src/util/: config_parser.ts  logging.ts  rate_limit.ts
server/systemd/: lsdamm.service
vscode-extension/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: chat.css  chat.js
vscode-extension/src/: extension.ts
vscode-extension/src/commands/: command_handler.ts
vscode-extension/src/services/: mesh_service.ts  status_bar.ts  tree_providers.ts
vscode-extension/src/views/: chat_panel.ts
